2010-01-16  Romain Francois <francoisromain@free.fr>

	* R/Rcpp.package.skeleton: now generating example C++ and R
	code that uses Rcpp, also the generated Makevars contains
	a hack so that the generated package can pass check (after
	edition of Rd files, NAMESPACE, etc ...)
	* inst/skeleton: added example code used by the skeleton 
	generator

2010-01-15  Romain Francois <francoisromain@free.fr>

	* src/Rcpp/NumericVector.h: cache the start of the array to
	improve performance of operator[]
	* src/NumericVector.cpp: idem

	* src/Rcpp/IntegerVector.h:
	* src/Rcpp/RawVector.h:
	* src/Rcpp/ComplexVector.h:
	* src/Rcpp/LogicalVector.h: idem

	* src/IntegerVector.cpp:
	* src/RawVector.cpp:
	* src/ComplexVector.cpp:
	* src/LogicalVector.cpp: idem

2010-01-13  Romain Francois <francoisromain@free.fr>

	* R/cpp.package.skeleton.R: new function cpp.package.skeleton
	to extend the code generation performed by package.skeleton
	to Rcpp features

	* man/cpp.package.skeleton.Rd: documentation for cpp.package.skeleton

	* src/Rcpp/VectorBase.h: new virtual class Rcpp::VectorBase
	to manage common things of all vectors (length, names, etc ...)
	all Vector classes now derive from VectorBase

	* src/Rcpp/Environment.h: Environment::Binding gains a templated
	conversion operator, to facilitate distance 2 implicit conversion
	making this possible: 
	Environment env("package:stats") ;
	Function f = env["rnorm"] ;

	* src/Rcpp/GenericVector.h: GenericVector::Proxy gains an 
	assignement operator to deal with Environment::Binding. This is
	to work around distance 1 implicit conversion restrictions

	* src/Rcpp/NumericVector.h: operator[], begiun and end are
	promoted to inline member functions
	* src/Rcpp/IntegerVector.h: idem
	* src/Rcpp/RawVector.h: idem
	* src/Rcpp/LogicalVector.h: idem

2010-01-12  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION: Release 0.7.2

	* debian/*: Similarly updated for new release to Debian

	* .Rbuildignore: Add 'inst/doc/{html,latex,man} as we no