@@ -422,6 +422,11 @@ public:
     static Environment base_namespace() throw() ;
     
     /**
+     * @return the Rcpp namespace
+     */
+    static Environment& Rcpp_namespace() throw() ;
+    
+    /**
      * @param name the name of the package of which we want the namespace
      *
      * @return the namespace of the package
@@ -435,6 +440,10 @@ public:
      */
     Environment parent() const throw() ;
     
+private:
+	/* we cache the Rcpp namespace environment since
+	it is used many times internally */
+	static Environment RCPP_NAMESPACE ;
 };
 
 } // namespace Rcpp
